<resources>

    <string name="app_name">Pabulum</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="recipes">Recipes</string>
    <string name="vault">Vault</string>
    <string name="facts">Facts</string>
    <string name="network_error">Error \n No Network Connection</string>

    <string name="no_gluten">Free</string>
    <string name="vege">Vege</string>

    <string name="meal_type">Type</string>
    <string name="diet_type">Diet</string>
    <string name="main_course">Main Course</string>
    <string name="soup">Soup</string>
    <string name="dessert">Dessert</string>
    <string name="side_dish">Side Dish</string>
    <string name="salad">Salad</string>
    <string name="appetizer">Appetizer</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="drink">Drink</string>
    <string name="snack">Snack</string>
    <string name="fingerfood">FingerFood</string>
    <string name="marinade">Marinade</string>
    <string name="sauce">Sauce</string>
    <string name="beverage">Beverage</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="primal">Primal</string>
    <string name="low_fodmap">Low FODMAP</string>
    <string name="pescatarian">Pescatarian</string>
    <string name="whole30">Whole30</string>
    <string name="paleo">Paleo</string>
    <string name="vegan">Vegan</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="search">Search</string>
    <string name="dairy_free">Dairy Free</string>
    <string name="budget">Budget</string>
    <string name="healthy">Healthy</string>
    <string name="save_to_vault">Save to Vault</string>
    <string name="vault_is_empty">Pabulum Vault\n is empty</string>
    <string name="remove">Remove</string>
    <string name="remove_all">Remove all</string>
    <string name="lorem_ipsum">Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</string>
    <string name="error">Error</string>
    <string name="share">Share</string>

</resources>