<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragments.recipes.bottomSheet.RecipesBottomSheet">

    <TextView
        android:id="@+id/mealType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/meal_type_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealType_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/meal_type_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chip_appetizer"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_appetizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"
                    tools:ignore="TextContrastCheck"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_mainCourse"
                    style="@style/ChipsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_sideDish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_snack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/snack"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_soup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/soup"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_salad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_bread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bread"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_breakfast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/breakfast"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_sauce"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sauce"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_marinade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marinade"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_fingerFood"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fingerfood"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_dessert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_beverage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beverage"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_drink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drink"/>

         </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <TextView
        android:id="@+id/dietType_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="13dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_type_scrollView" />


    <HorizontalScrollView
        android:id="@+id/diet_type_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietType_textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/diet_type_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@+id/chip_vegetarian"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_vegetarian"
                    style="@style/ChipsStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegetarian"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_glutenFree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gluten_free"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_ketogenic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ketogenic"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_Vegan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vegan"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_paleo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paleo"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_whole30"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whole30"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_pescaterian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pescatarian"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_lowFodmap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/low_fodmap"/>

                <com.google.android.material.chip.Chip
                    style="@style/ChipsStyle"
                    android:id="@+id/chip_primal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/primal"/>

            </com.google.android.material.chip.ChipGroup>

        </LinearLayout>

    </HorizontalScrollView>

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/search"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diet_type_scrollView"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>