<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.summary.SummaryFragment">


    <ImageView
        android:id="@+id/primary_imageView"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <View
        android:id="@+id/overlay"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:background="@drawable/overlay"
        app:layout_constraintBottom_toBottomOf="@+id/primary_imageView"
        app:layout_constraintEnd_toEndOf="@+id/primary_imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/primary_imageView"
        app:layout_constraintTop_toTopOf="@+id/primary_imageView"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/minutes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="11dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/primary_imageView"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/minutes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        android:src="@drawable/ic_time"
        app:layout_constraintBottom_toTopOf="@+id/minutes_textView"
        app:layout_constraintEnd_toEndOf="@+id/minutes_textView"
        app:layout_constraintStart_toStartOf="@+id/minutes_textView" />

    <TextView
        android:id="@+id/likes_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:text="100"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/minutes_textView"
        app:layout_constraintEnd_toStartOf="@+id/minutes_textView" />

    <ImageView
        android:id="@+id/likes_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:tint="@color/white"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@+id/likes_textView"
        app:layout_constraintEnd_toEndOf="@+id/likes_textView"
        app:layout_constraintStart_toStartOf="@+id/likes_textView" />

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="11dp"
        android:fontFamily="@font/merriweather"
        android:text="Title"
        android:textColor="@color/darker"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/primary_imageView" />

    <ImageView
        android:id="@+id/vegan_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintStart_toStartOf="@+id/name_textView"
        app:layout_constraintTop_toBottomOf="@+id/name_textView" />

    <TextView
        android:id="@+id/vegan_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textColor="@color/darkMediumGray"
        android:text="@string/vegan"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegan_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegan_marker_imageView" />

    <ImageView
        android:id="@+id/vegetarian_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintStart_toStartOf="@+id/vegan_marker_imageView"
        app:layout_constraintTop_toBottomOf="@+id/vegan_marker_imageView" />

    <TextView
        android:id="@+id/vegetarian_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/vegetarian"
        android:textColor="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegetarian_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/vegetarian_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/vegetarian_marker_imageView" />

    <ImageView
        android:id="@+id/dairy_free_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/vegan_marker_textView"
        app:layout_constraintStart_toEndOf="@+id/vegan_marker_textView"
        app:layout_constraintTop_toTopOf="@+id/vegan_marker_textView" />

    <TextView
        android:id="@+id/dairy_free_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/dairy_free"
        android:textColor="@color/darkMediumGray"
        app:tint="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_marker_imageView" />

    <ImageView
        android:id="@+id/gluten_free_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintStart_toStartOf="@+id/dairy_free_marker_imageView"
        app:layout_constraintTop_toBottomOf="@+id/dairy_free_marker_imageView" />

    <TextView
        android:id="@+id/gluten_free_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/gluten_free"
        android:textColor="@color/darkMediumGray"
        app:tint="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/gluten_free_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/gluten_free_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/gluten_free_marker_imageView" />

    <ImageView
        android:id="@+id/budget_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/dairy_free_marker_textView"
        app:layout_constraintStart_toEndOf="@+id/dairy_free_marker_textView"
        app:layout_constraintTop_toTopOf="@+id/dairy_free_marker_textView" />

    <TextView
        android:id="@+id/budget_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/budget"
        android:textColor="@color/darkMediumGray"
        app:tint="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/budget_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/budget_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/budget_marker_imageView" />

    <ImageView
        android:id="@+id/healthy_marker_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:src="@drawable/ic_indicator"
        app:tint="@color/darkMediumGray"
        app:layout_constraintStart_toStartOf="@+id/budget_marker_imageView"
        app:layout_constraintTop_toBottomOf="@+id/budget_marker_imageView" />

    <TextView
        android:id="@+id/healthy_marker_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/healthy"
        android:textColor="@color/darkMediumGray"
        app:layout_constraintBottom_toBottomOf="@+id/healthy_marker_imageView"
        app:layout_constraintStart_toEndOf="@+id/healthy_marker_imageView"
        app:layout_constraintTop_toTopOf="@+id/healthy_marker_imageView" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vegetarian_marker_imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/summary_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/darkMediumGray"
                android:text="TextView"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>